cmake_minimum_required(VERSION 3.30)
project(hw2025_3 C)

set(CMAKE_C_STANDARD 11)

add_executable(hw2025_3 main.c
        Feature/p_01.c
        Feature/p_02.c
        Feature/p_03.c
        Feature/p_04.c
        Feature/p_05.c
        Feature/p_06.c
        Feature/p_07.c
        Feature/p_08.c
        Feature/p_09.c
        Feature/p_10.c)
